# pars

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .releaserc  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  Makefile copy  README.tr.md  VERSION  dockerfile  go.mod  go.sum  package-lock.json  package.json  readme.md  release.config-test.mjs  release.config.js  release.config.mjs  t.txt  test.file
.config/: dput.cf
.github/: CODEOWNERS  pull_request_template.md
cmake/: CMakeLists.txt  CMakeTemplates.cmake  CMakeVariables.cmake  build.binary.cmake  build.cmake  build.deb.package.cmake  generate_debian_control_file.cmake
cmake/Core/: ShellConfiguration.cmake  SystemConfiguration.cmake
cmake/Modules/: BuildModule.cmake
cmake/common/: CMakeLists.txt  consts-app.cmake  consts-os-linux.cmake  consts-project.cmake  consts-system.cmake  release.cmake
cmake/core/: CMakeLists.txt  add-module.cmake  add-modules-from-directory.cmake  add-subdirectories-from-directory.cmake  detect-os.cmake  include-components-from-directory.cmake  include-module-files.cmake  shell.cmake  var-list-to-make-args.cmake  version.cmake
cmake/modules/: CMakeLists.txt
cmake/modules/deb/: CMakeLists.txt  Consts.cmake  Functions.cmake  Module.cmake  ModuleConsts.cmake  ModuleFunctions.cmake
cmake/modules/deb/components/configuration/: component.cmake
cmake/modules/deb/components/configuration/debian-files/: changelog  rules
cmake/modules/deb/components/setup/: component.cmake
cmake/modules/deb/debian-files/: changelog  control  copyright  install  postinst  postrm  preinst  rules
cmake/modules/deb/debian-files/source/: format
cmake/modules/info/print/: Functions.cmake  Init.cmake
cmake/modules/info/print/components/version/: component.cmake
cmake/modules/installer/msi/: Consts.cmake  Functions.cmake  Init.cmake
cmake/modules/installer/msi/components/configuration/: component.cmake
cmake/modules/installer/msi/components/configuration/msi-files/: config.wxs  pars.wxs
cmake/modules/installer/msi/components/package/: component.cmake
cmake/modules/installer/msi/components/payload/: component.cmake
cmake/modules/installer/msi/components/setup/: component.cmake
cmake/modules/package/choco/: Consts.cmake  Functions.cmake  Init.cmake
cmake/modules/package/choco/components/configuration/: component.cmake
cmake/modules/package/choco/components/configuration/choco-files/: config.nuspec
cmake/modules/package/choco/components/configuration/choco-files/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
cmake/modules/package/choco/components/package/: component.cmake
cmake/modules/package/choco/components/payload/: component.cmake
cmake/modules/package/choco/components/setup/: component.cmake
cmake/modules/package/deb/: CMakeLists.txt  Consts.cmake  Functions.cmake  Init.cmake  Module.cmake
cmake/modules/package/deb/components/configuration/: component.cmake
cmake/modules/package/deb/components/configuration/debian-files/: changelog  compat  control  copyright  install  postinst  postrm  preinst  rules
cmake/modules/package/deb/components/configuration/debian-files/source/: format
cmake/modules/package/deb/components/package/: component.cmake
cmake/modules/package/deb/components/payload/: component.cmake
cmake/modules/package/deb/components/push-ppa/: component.cmake
cmake/modules/package/deb/components/setup/: component.cmake
cmake/modules/package/deb/components/sign-gpg/: component.cmake
cmake/modules/package/rpm/: CMakeLists.txt  Consts.cmake  Functions.cmake  Init.cmake
cmake/modules/package/rpm/components/configuration/: component.cmake
cmake/modules/package/rpm/components/configuration/rpm-files/SPECS/: config.spec
cmake/modules/package/rpm/components/package/: component.cmake
cmake/modules/package/rpm/components/payload/: component.cmake
cmake/modules/package/rpm/components/setup/: component.cmake
cmake/modules/package/snap/: Consts.cmake
cmake/modules/package/snap/components/configuration/: component.cmake
cmake/modules/package/snap/components/configuration/snap-files/: snapcraft.yaml
cmake/modules/package/snap/components/package/: component.cmake
cmake/modules/package/snap/components/payload/: component.cmake
cmake/modules/package/snap/components/push-ppa/: component.cmake
cmake/modules/package/snap/components/setup/: component.cmake
cmake/modules/package/snap/components/sign-gpg/: component.cmake
cmake/modules/release/: CMakeLists.txt
cmake/modules/release/notes/: CMakeLists.txt  Functions.cmake  Module.cmake
cmake/modules/release/version/: Consts.cmake
cmake/modules/release/version/components/bump/: component.cmake  print_version.cmake
cmake/modules/source/archive/: CMakeLists.txt
cmake/modules/source/archive/components/extract/: component.cmake
cmake/modules/vcs/git/: Consts.cmake
cmake/modules/vcs/git/components/dev_to_test/: component.cmake
cmake/utils/: CMakeLists.txt
cmake/utils/archive/: CMakeLists.txt  Consts.cmake  Functions.cmake
(+1106 files in other folders)
